# backend/app/Http/Controllers/UserController.php
@@ -2,11 +2,14 @@
 
 namespace App\Http\Controllers;
 
+use App\Http\Requests\UserLoginRequest;
 use App\Http\Requests\UserRegisterRequest;
 use App\Http\Resources\UserResource;
 use App\Models\User;
+use Illuminate\Http\Exceptions\HttpResponseException;
 use Illuminate\Http\JsonResponse;
 use Illuminate\Http\Request;
+use Illuminate\Support\Facades\Auth;
 use Illuminate\Support\Facades\Hash;
 
 class UserController extends Controller
@@ -22,5 +25,23 @@ class UserController extends Controller
             'data' => new UserResource($user),
             'message' => 'Register success',
         ], 201);
+    }
+
+    public function login(UserLoginRequest $request): JsonResponse {
+        $data = $request->validated();
+        
+        if (!Auth::attempt($data)) {
+            throw new HttpResponseException(response()->json([
+                'status' => 401,
+                'data' => null,
+                'message' => 'Login failed, Invalid email or password'
+            ], 401));
+        }
+
+        return response()->json([
+            'status' => 200,
+            'data' => new UserResource($request->user()),
+            'message' => 'Login success'
+        ], 200);
     }
 }
