# backend/docs/api.yaml
@@ -9,7 +9,68 @@ info:
 servers:
   - url: https://localhost:8000/api
     description: Development
+components:
+  securitySchemes:
+    cookieAuth:
+      type: apiKey
+      in: cookie
+      name: X-XSRF-TOKEN
 paths:
+  /users/login:
+    post:
+      tags:
+        - Authorization
+      summary: Login user
+      responses:
+        200:
+          description: Login user success
+          headers:
+            Set-Cookie:
+              schema:
+                type: string
+                example: X-XSRF-TOKEN=example123;
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: number
+                  data:
+                    type: object
+                    properties:
+                        id:
+                          type: string
+                        name:
+                          type: string
+                        description:
+                          type: string
+                        status:
+                          type: string
+                        avatar:
+                          type: string
+                        email:
+                          type: string
+                        is_online:
+                          type: boolean
+                        last_seen:
+                          type: number
+                        joined_at:
+                          type: number
+                  message:
+                    type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                email:
+                  type: string
+                password:
+                  type: string
+      security:
+        - cookieAuth: []
   /users/{userId}:
     get:
       tags:
